@@ -1,6 +1,7 @@
 
 Version (CVS)
 -------------
+XML:	Fix namespaces issue in the marhalling process (Arnaud - 20020211)
 
 ALL:    Upgraded Jakarta Ant to version 1.4 (kvisco) - 20020205)
 
